fix css spacing

--- a/src/comp/HeroSection/HeroSection.module.css
+++ b/src/comp/HeroSection/HeroSection.module.css
@@ -24,11 +24,18 @@
   font-size: 0.8rem;
 }
 
-.hero > h1 {
+.hero_h1 {
   font-size: 2.5rem; /* 40/16 = 2.5rem*/
 }
 
-.hero > p {
+.hero_para {
+  width: 52.68rem;  /*843/16 = 52.6875*/
+  display: flex;
+  flex-direction: column;
+  gap: 2.25rem; /* (440-404)/16 USE RULER*/
+}
+
+.hero_para > p {
   font-size: 0.94rem; /*15.14/16 = 0.94625*/
 }
 
